app/styles/scss/modules/_course-block.scss
.row {

    .course {
        background-color: $courseBgColor;
        background-clip: content-box;
        margin-bottom: $defaultMarginBottom;
        
        .course-name {
            font-size: 18px;
            color: $aticleTitleColor;
            text-decoration: none;
            font-weight: bold;

            &:hover {
                text-decoration: underline;
            }
        }

        .course-img {
            margin-top: 25%;
            display: block;
            width: 100%;

            & > img {
                max-width: 190px;
                max-height: 190px;
            }
        }
        .course-action {
            margin-top: 25px;

            .course-schedule {
                height: 40px;
                display: inline-block;
                margin-bottom: 25px;

                & > span {
                    color: #787878;
                    font-style: italic;
                    display: table-cell;
                    vertical-align: middle;
                    height: 40px;
                }
            }
        }

        .btn-success {
            background-color: #60b760;
        }
    }

    &.course {
        background-clip: inherit;
        padding: 20px;
        color: $courseColor;
    }
}

.accordion {
    color: $accordionTextColor;

    .accordion-heading {
        border-bottom: 1px dashed $accordionTextColor;
        text-align: right;

        .accordion-toggle {
            text-decoration: none;
            color: $accordionTextColor;
        }
    }

    .accordion-inner {
        border-bottom: 1px dashed $accordionTextColor;
        margin-bottom: 10px;

        & .list-unstyled > li.col-lg-6 > span {
            font-style: italic;
        }

    }

    &.filter {
        padding: 0 10px;

        .accordion-heading {
            text-align: left;

            .accordion-toggle {
                font-weight: bold;
                font-size: 1.1em;
            }
        }

        .accordion-inner {
            border: 0px;
        }

        .form-group {
            padding-left: 5px;
            margin-bottom: 0px;

            .checkbox {
                margin: 11px 0px;
            }
        }
    }
}

.panel-flat {
    border: 0px;
    border-radius: 0px;
    .panel-body {
        padding: 20px 15px 15px 15px;
        H4{
         font-size: 1.1em;
         font-weight: bold;
         margin-bottom: 31px;
        }

    }
}



.banner-hot {
    display: table;
    width: 80%;
    height: 68px;
    margin: 15px auto;
    position: relative;
    border: 1px solid #E6E6E6;


    .banner-inner {
        padding-left: 0px;
        display: table-cell;
        vertical-align: middle;
        padding: 0px 40px 0px 15px;

        a {
            color: #424242;
            font-size: 1.23em;
            text-decoration: none;
            line-height: 0px;
        }
    }

    .badge-hot {
        display: block;
        width: 43px;
        position: absolute;
        top: 15px;
        right: -13px;

        .badge-panel {
            height: 24px;
            padding: 2px 6px 4px 7px;
            background-color: #FFB115;


            & > span {
                color: white;
                font-weight: bold;
                font-size: 0.88em;

            }
        }

        .badge-triangle {
            float: right;
            width: 0;
            height: 0;
            border-style: solid;
            border-width: 12px 12px 0 0;
            border-color: #E38D00 transparent transparent transparent;
        }
    }
}

.module {
    .module-title {
        display: block;
        font-size: 14px;
        padding-top: 35px;
        color: $aticleTitleColor;
    }
}

.alignment {
    text-align: justify;
}

